# solsol

./: .env.example  .gitignore  README.md  llm.md
backend/: .env.example  create_mock_pdf.py  main.py  pyproject.toml  requirements.txt  sample_answer.m4a
backend/app/: config.py
backend/app/agents/: base_agent.py  helpers.py  judge.py  llm.py  meta.py  resume.py  resume_agent.py  state.py  stress.py  trend.py
backend/app/data/: interview_session_latest.json
backend/app/models/: interview.py  interview_session.py  session.py
backend/app/routers/: interview.py  interview_sessions.py  interview_turns.py  session.py
backend/app/services/: answer_quality.py  crawler.py  file_parser.py  graph.py  interview_db.py  naver_news.py  session_store.py  stt.py  tts.py
backend/app/uploads/audio/: s2_r1_d71457db.webm
backend/scripts/: collect_naver_news.py  demo_interview.py
data/backup_demo/: sample_profile.json
docs/: 01_implementation_status.md  02_agent_flow.md  03_demo_and_validation.md  PRD.md  agent-demo-result.md  interview-agent-overview.md  interview-agent-plan.md  interview-agent.md  repo_structure.md  team_roles.md  upstage-api-spec.md  대회_안내.md
lovable/: package-lock.json
lovable/src/: styles.css
lovable/src/components/interview/: AnalyzingScreen.tsx  InputScreen.tsx  InterviewScreen.tsx  LandingScreen.tsx  ReportScreen.tsx
lovable/src/lib/: api.ts  interview-mock.ts
lovable/src/routes/: index.tsx
