[project]
name = "shipyak-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "fpdf2>=2.8.7",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.3",
    "langgraph>=1.2.1",
    "openai>=2.38.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "redis>=7.4.0",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear
select = ["E", "W", "F", "I", "UP", "B"]
